# TechSupportChatbot-Public

./: README.md  Task.md  gradio_app.py  pyproject.toml
metrics/: efficiency.py  evaluator.py  generation.py  retrieval.py  test_sets.py
notebooks/: 1_EDA.ipynb  cloud.ipynb
saved_models/sbert_cache/models--ai-forever--sbert_large_nlu_ru/refs/: main
src/interface/: gradio_UI.py
src/modeling/: base_models.py  data_preprocessing.py  lemmatize.py  models.py
