[project]
name = "TechSupportChatbotWB"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Emil G.", email = "gabdulvaleev.emil@mail.ru"},
]
dependencies = [
    "transformers>=4.53.0", "faiss-cpu>=1.11.0",
    "pandas>=2.3.0", "numpy>=2.3.1", "openpyxl>=3.1.5", 
    "ipykernel>=6.29.5", "scikit-learn>=1.7.0", 
    "gradio>=5.35.0", 
    "sentence-transformers>=5.0.0", 
    "matplotlib>=3.10.3", 
    "torch>=2.6.0", 
    "nltk>=3.9.1", 
    "rouge>=1.0.1", 
    "pymorphy2>=0.9.1", 
    "peft>=0.16.0", 
]
requires-python = ">=3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false